force-app/main/default/objects/Action_Plan_Error__c/Action_Plan_Error__c.object-meta.xml
<CustomObject>
    <label>Action Plan Error</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plan Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>