force-app/main/default/objects/Action_Plan_Error__c/fields/Child_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Child_Job_Id__c</fullName>
    <label>Child Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>