force-app/main/default/objects/Action_Plan_Error__c/fields/Kontrakt__c.field-meta.xml
<CustomField>
    <fullName>Kontrakt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kontrakt</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipName>Errors_Action_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>