force-app/main/default/objects/Action_Plan_Error__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Id__c</columns>
    <columns>Child_Job_Id__c</columns>
    <columns>Kontrakt__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Cause__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>